# JobIA

./: .gitignore  db.sqlite3  dump.rdb  pyproject.toml  requirements.txt  tasks.txt
accounts/: apps.py  backends.py  models.py  signals.py  urls.py  views.py
accounts/migrations/: 0001_initial.py
core/: settings.py  urls.py
jobia/: admin.py  apps.py  models.py  urls.py  utils.py  views.py
jobia/migrations/: 0001_initial.py  0002_curriculum_created_at_curriculum_curriculum_and_more.py  0003_curriculum_slug_curriculum_status_and_more.py  0004_alter_curriculum_curriculum.py  0005_alter_curriculum_title.py  0006_interview.py  0007_interview_status_alter_interview_level_and_more.py  0008_interviewmessage.py
payments/: admin.py  decorators.py  models.py  repository.py  urls.py  views.py
payments/management/commands/: create_plans.py
payments/migrations/: 0001_initial.py  0002_delete_resouceusage_delete_subscription_plan_limits_and_more.py  0003_subscription.py  0004_resouceusage.py
static/css/: dashboard.css  home_page.css  interview_simulation.css  interview_start.css  login.css  main.css  multi-step-form.css  new_curriculum.css  upgrade.css
static/js/: main.js  multi-step-form.js  new_curriculum.js
staticfiles/: staticfiles.json
staticfiles/CACHE/: manifest.json
staticfiles/CACHE/css/: output.69abb9f689a8.css  output.c37239807a2a.css  output.cdd677299a3f.css  output.ed4d0e53b141.css
staticfiles/CACHE/js/: output.4ed617e5face.js  output.7aeb3d17f654.js  output.9beb6073d4d6.js
staticfiles/css/: home_page.a00e14612fb4.css  login.css
staticfiles/js/: main.db1c60cd2d49.js
staticfiles/js/auth/: signup.9e443927be94.js
templates/auth/: auth.html  login.html  signup.html
templates/forms/: elite.html  essencial.html  executivo.html  profissional.html
templates/jobia/: base.html  base_no_nav.html  dashboard.html  generate_curriculum.html  home_page.html  interview_simulation.html  interview_start.html  new_curriculum.html
templates/partials/: messages.html
templates/payments/: base.html  upgrade.html
