[project]
name = "jobia"
version = "0.1.0"
description = "JobIA, é sobre todos nós."
authors = [
    {name = "angelo-francisco",email = "ics20080729@gmail.com "}
]
license = {text = "ALL RIGHTS RESERVED BY JOBIA ENTERPRISE"}
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "django (>=5.2,<6.0)"
]

[tool.taskipy.tasks]
run = 'python manage.py runserver'
mkmg = 'python manage.py makmigrations'
mg = 'python manage.py migrate'
all = 'task mkmg && task mg && task run'

[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"
ruff = "^0.11.7"
djlint = "^1.36.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
