[project]
name = "jobia"
version = "0.1.0"
description = "JobIA, é sobre todos nós."
authors = [
    {name = "angelo-francisco",email = "ics20080729@gmail.com "}
]
license = {text = "ALL RIGHTS RESERVED BY JOBIA ENTERPRISE"}
readme = "README.md"
requires-python = ">=3.13,<4.0.0"
dependencies = [
    "django (>=5.2,<6.0)",
    "redis (>=6.0.0,<7.0.0)",
    "whitenoise (>=6.9.0,<7.0.0)",
    "gunicorn (>=23.0.0,<24.0.0)",
    "psycopg (>=3.2.7,<4.0.0)",
    "dj-database-url (>=2.3.0,<3.0.0)",
    "django-compressor (>=4.5.1,<5.0.0)",
    "django-environ (>=0.12.0,<0.13.0)",
    "shortuuid (>=1.0.13,<2.0.0)",
    "requests (>=2.32.3,<3.0.0)",
    "weasyprint (>=65.1,<66.0)",
]

[tool.taskipy.tasks]
run = 'python manage.py runserver 0.0.0.0:8000'
mkmg = 'python manage.py makemigrations'
mg = 'python manage.py migrate'
collect = 'python manage.py collectstatic --noinput'
compress = 'python manage.py compress --force'
cplan = 'python manage.py create_plans'
all = 'task mkmg && task mg && task cplan && task collect && task compress && task run'

[tool.poetry.group.dev.dependencies]
taskipy = "^1.14.1"
ruff = "^0.11.7"
djlint = "^1.36.4"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
